--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2021"
 tauri-build = { version = "1.3", features = [] }
 
 [dependencies]
-tauri = { version = "1.3", features = ["fs-all", "path-all", "shell-execute", "shell-open", "shell-sidecar", "system-tray", "window-start-dragging"] }
+tauri = { version = "1.3", features = ["fs-all", "path-all", "shell-execute", "shell-open", "shell-sidecar", "system-tray", "updater", "window-start-dragging"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
