main update for v1.0.0-alpha.1

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,10 @@ dist-ssr
 # linux kernel and fs
 src-tauri/linux/*
 
+# other bin files
+src-tauri/bin/*
+!src-tauri/bin/readme.md
+
 # naveo kits binaries
 src-tauri/binaries/*
 !src-tauri/binaries/readme.md
